# LibPFASST

./: .depend  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  Makefile.FFTW  Makefile.defaults  Makefile.external  Makefile.hypre  Makefile.local  Makefile.local.gnu  Makefile.rules  README  README.md  bitbucket-pipelines.yml  communicators.html  compiling.html  copyright.html  debug.py  ford.html  genindex.html  index.html  overview.html  pfasst.py  setup.py  sweepers.html  tasks.md  tutorial.html  wscript
.circleci/: config.yml
Doxy/: Doxyfile
FORD/: README  libpfasst.md
Makefile.examples/: Makefile.AMReX  Makefile.FFT  Makefile.PETSc  Makefile.hypre  Makefile.local  Makefile.local.cori
Tutorials/: CMakeLists.txt
_sources/: compiling.rst.txt  index.rst.txt
attic/: pf_cpthreads.c  pf_fakecomm.f90  pf_mod_encap.f90  pf_npy.c
docs/: Makefile  Makefile~  README  communicators.rst  conf.py  download.rst  index.rst  maths.rst  overview.rst  parameters.rst  reference.rst  tutorial.rst
mk/: GPackage.mak  makefile.gcc47.defs  makefile.juqueen.defs  makefile.orga.defs  makefile.spruce.defs  version.py
pf/: __init__.py  convergence.py  io.py  nwc.py  pfasst.py  setup.py  speedup.py
pp/: README  iter_per_step.py  parareal_run.py  pfasst_run.py  stats_per_step.py  time_per_proc.py
src/: CMakeLists.txt  README  dfftpack.f  encap.f90  pf_amisdc.f90  pf_amisdcQ.f90  pf_amisdc_sweeper.f90  pf_amisdc_sweeperQ.f90  pf_amrex_encap.f90  pf_comm.f90  pf_cpthreads.c  pf_cycle.f90  pf_dnpy.f90  pf_dtype.f90  pf_dzmq.c  pf_erkstepper.f90  pf_eulerstepper.f90  pf_exp.f90  pf_expQ.f90  pf_exp_sweeper.f90  pf_explicit.f90  pf_explicitQ.f90  pf_fake.f90  pf_fakecomm.f90  pf_fexp_sweeper.f90  pf_fft.f90  pf_fftpack.f90  pf_fftw.f90  pf_fimex.f90  pf_ham_sys_encap.f90  pf_hooks.f90  pf_imex.f90  pf_imexQ.f90  pf_imexQ_oc.f90  pf_imexQ_oc_sweeper.f90  pf_imexR.f90  pf_imexR_sweeper.f90  pf_imex_sweeper.f90  pf_imk.f90  pf_imk_sweeper.f90  (+50 more)
src/encaps/: pf_ndarray.f90  pf_ndarray_oc.f90  pf_ndsysarray.f90
src/sweepers/: pf_amisdc.f90  pf_amisdcQ.f90  pf_imex.f90  pf_imk.f90  pf_misdc.f90  pf_misdcQ.f90  pf_misdcQ_oc.f90  pf_verlet.f90
test/: CMakeLists.txt  run_encaps.sh  (+11 more)
test/nagumo/: .depend  CMakeLists.txt  Makefile  pfasst.nml  probin.nml
test/nagumo/src/: feval.f90  hooks.f90  level.f90  main_split.f90  numpy.c  pf_optimization.f90  pf_optimization_flex.f90  probin.f90  solutions.f90
(+1842 files in other folders)
